# autodev-framework

./: .gitignore  Dockerfile  README.md  Tiltfile  alembic.ini  autodev.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
autodev/: __init__.py  __main__.py  agent_log.py  deploy.py  orchestrator.py  pm_worker.py  project_contexts.py  qa_worker.py  release_worker.py
autodev/agents/: __init__.py  ba.py  developer.py  pm.py  release_manager.py  tester.py
autodev/api/: __init__.py  app.py  database.py  middleware.py  websocket.py
autodev/cli/: __init__.py  main.py
autodev/core/: __init__.py  config.py  events.py  github_ops.py  learning.py  metrics.py  models.py  notifications.py  providers.py  queue.py  runner.py  state.py
autodev/integrations/: __init__.py  browser.py  github.py  slack.py  telegram.py  telegram_pm.py  webhook.py
dashboard/: Dockerfile  package-lock.json  package.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  QUICKSTART.md  data_generator_production_readiness.md
examples/: autodev.yaml
k8s/: api.yaml  dashboard.yaml
migrations/: env.py
tests/: __init__.py  test_api.py  test_ba.py  test_cli.py  test_config.py  test_data_generator.py  test_data_generator_enhanced.py  test_developer.py  test_events.py  test_github.py  test_github_import.py  test_github_ops.py  test_learning.py  test_metrics.py  test_models.py  test_notifications.py  test_placeholder.py  test_pm.py  test_pm_api.py  test_providers.py  test_queue.py  test_release_manager.py  test_runner.py  test_state.py  test_tester.py
(+55 files in other folders)
