[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodev"
version = "0.1.0"
description = "AutoDev Framework — autonomous multi-agent software development platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
autodev = "autodev.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["autodev"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
